# forem-api-client

./: main.py  pyproject.toml  test.py  test_opening.py
forem_api_client/: types.py  validators.py  xml_builder.py
forem_api_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
forem_api_client/forem_api_client.egg-info/: SOURCES.txt
forem_api_client/nomenclatures/: codepostal  contrattravail  pays  permisconduire
forem_api_client/nomenclatures_models/: base.py  competence.py  competencenumerique.py  contrattravail.py  dimeco.py  langue.py  nacebel2008.py  niveauetude.py  pays.py  permisconduire.py  provenexperience.py  romev3.py  tempstravail.py
forem_api_client/xml_models/: __init__.py  position_opening.py
forem_api_client/xml_models/position_opening_elements/: delivery_address.py  person_name.py  position_record_info.py  position_supplier.py  postal_address.py  recipient.py
src/: types.py  validators.py  xml_builder.py
src/forem_api_client.egg-info/: PKG-INFO  top_level.txt
src/nomenclatures/: competence  competencenumerique  dimeco  langue  localisation  nacebel2008  niveauetude  romeV3  tempstravail
src/nomenclatures_models/: base.py  contrattravail.py  dimeco.py  langue.py  niveauetude.py  pays.py  romev3.py  tempstravail.py
src/xml_models/: __init__.py  delivery_address.py  person_name.py  position_opening.py  position_record_info.py  position_supplier.py  postal_address.py  recipient.py
src/xml_models/contact_method/: contact_method.py  telephone.py
src/xml_models/position_opening_elements/: entity_name.py  id_offre.py  (+4 more)
(+44 files in other folders)
