[project]
name = "forem-api-client"
version = "0.4.0"
description = "Client for the forem API, xml builder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pydantic[email]>=2.11.4",
    "pydantic-xml>=2.17.0",
    "lxml>=5.4.0",
    "httpx>=0.28.1",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["forem_api_client*"]

[tool.setuptools.package-data]
forem_api_client = ["nomenclatures/*"]
